exports[`The ID5 Baton Lambda stack > matches the CODE snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuLambdaFunction"
    ],
    "gu:cdk:version": "62.0.1"
  },
  "Parameters": {
    "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/account/services/dotcom-store.bucket"
    },
    "SsmParameterValueabtestingdeployCODEfastlyapitokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/ab-testing-deploy/CODE/fastly-api-token"
    },
    "SsmParameterValueabtestingdeployCODEfastlyabtestingconfigC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/ab-testing-deploy/CODE/fastly-ab-testing-config"
    },
    "DistributionBucketName": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts"
    }
  },
  "Resources": {
    "ID5BatonLambdaServiceRole5E3112D1": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "ab-testing-deploy"
          },
          {
            "Key": "gu:cdk:version",
            "Value": "62.0.1"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering"
          },
          {
            "Key": "Stack",
            "Value": "frontend"
          },
          {
            "Key": "Stage",
            "Value": "CODE"
          }
        ]
      }
    },
    "ID5BatonLambdaServiceRoleDefaultPolicy3736CB87": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName"
                      }
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName"
                      },
                      "/frontend/CODE/ab-testing-deploy/lambda.zip"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/CODE/frontend/ab-testing-deploy"
                  ]
                ]
              }
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/CODE/frontend/ab-testing-deploy/*"
                  ]
                ]
              }
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
                      }
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "ID5BatonLambdaServiceRoleDefaultPolicy3736CB87",
        "Roles": [
          {
            "Ref": "ID5BatonLambdaServiceRole5E3112D1"
          }
        ]
      }
    },
    "ID5BatonLambda41DA535C": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName"
          },
          "S3Key": "frontend/CODE/ab-testing-deploy/lambda.zip"
        },
        "Environment": {
          "Variables": {
            "FASTLY_API_TOKEN": {
              "Ref": "SsmParameterValueabtestingdeployCODEfastlyapitokenC96584B6F00A464EAD1953AFF4B05118Parameter"
            },
            "FASTLY_AB_TESTING_CONFIG": {
              "Ref": "SsmParameterValueabtestingdeployCODEfastlyabtestingconfigC96584B6F00A464EAD1953AFF4B05118Parameter"
            },
            "STAGE": "CODE",
            "ARTIFACT_BUCKET_NAME": {
              "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
            },
            "STACK": "frontend",
            "APP": "ab-testing-deploy"
          }
        },
        "FunctionName": "ab-testing-deploy-CODE",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "JSON"
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "ID5BatonLambdaServiceRole5E3112D1",
            "Arn"
          ]
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "ab-testing-deploy"
          },
          {
            "Key": "gu:cdk:version",
            "Value": "62.0.1"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering"
          },
          {
            "Key": "Stack",
            "Value": "frontend"
          },
          {
            "Key": "Stage",
            "Value": "CODE"
          }
        ],
        "Timeout": 30
      },
      "DependsOn": [
        "ID5BatonLambdaServiceRoleDefaultPolicy3736CB87",
        "ID5BatonLambdaServiceRole5E3112D1"
      ]
    },
    "InvokeDictionaryDeployLambda": {
      "Type": "AWS::CloudFormation::CustomResource",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "ID5BatonLambda41DA535C",
            "Arn"
          ]
        }
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    }
  }
}
`;

exports[`The ID5 Baton Lambda stack > matches the PROD snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuLambdaFunction"
    ],
    "gu:cdk:version": "62.0.1"
  },
  "Parameters": {
    "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/account/services/dotcom-store.bucket"
    },
    "SsmParameterValueabtestingdeployPRODfastlyapitokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/ab-testing-deploy/PROD/fastly-api-token"
    },
    "SsmParameterValueabtestingdeployPRODfastlyabtestingconfigC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/ab-testing-deploy/PROD/fastly-ab-testing-config"
    },
    "DistributionBucketName": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts"
    }
  },
  "Resources": {
    "ID5BatonLambdaServiceRole5E3112D1": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "ab-testing-deploy"
          },
          {
            "Key": "gu:cdk:version",
            "Value": "62.0.1"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering"
          },
          {
            "Key": "Stack",
            "Value": "frontend"
          },
          {
            "Key": "Stage",
            "Value": "PROD"
          }
        ]
      }
    },
    "ID5BatonLambdaServiceRoleDefaultPolicy3736CB87": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName"
                      }
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName"
                      },
                      "/frontend/PROD/ab-testing-deploy/lambda.zip"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/PROD/frontend/ab-testing-deploy"
                  ]
                ]
              }
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/PROD/frontend/ab-testing-deploy/*"
                  ]
                ]
              }
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
                      }
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "ID5BatonLambdaServiceRoleDefaultPolicy3736CB87",
        "Roles": [
          {
            "Ref": "ID5BatonLambdaServiceRole5E3112D1"
          }
        ]
      }
    },
    "ID5BatonLambda41DA535C": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName"
          },
          "S3Key": "frontend/PROD/ab-testing-deploy/lambda.zip"
        },
        "Environment": {
          "Variables": {
            "FASTLY_API_TOKEN": {
              "Ref": "SsmParameterValueabtestingdeployPRODfastlyapitokenC96584B6F00A464EAD1953AFF4B05118Parameter"
            },
            "FASTLY_AB_TESTING_CONFIG": {
              "Ref": "SsmParameterValueabtestingdeployPRODfastlyabtestingconfigC96584B6F00A464EAD1953AFF4B05118Parameter"
            },
            "STAGE": "PROD",
            "ARTIFACT_BUCKET_NAME": {
              "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
            },
            "STACK": "frontend",
            "APP": "ab-testing-deploy"
          }
        },
        "FunctionName": "ab-testing-deploy-PROD",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "JSON"
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "ID5BatonLambdaServiceRole5E3112D1",
            "Arn"
          ]
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "ab-testing-deploy"
          },
          {
            "Key": "gu:cdk:version",
            "Value": "62.0.1"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering"
          },
          {
            "Key": "Stack",
            "Value": "frontend"
          },
          {
            "Key": "Stage",
            "Value": "PROD"
          }
        ],
        "Timeout": 30
      },
      "DependsOn": [
        "ID5BatonLambdaServiceRoleDefaultPolicy3736CB87",
        "ID5BatonLambdaServiceRole5E3112D1"
      ]
    },
    "InvokeDictionaryDeployLambda": {
      "Type": "AWS::CloudFormation::CustomResource",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "ID5BatonLambda41DA535C",
            "Arn"
          ]
        }
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    }
  }
}
`;
